--- a/index.html
+++ b/index.html
@@ -54,27 +54,86 @@ int range = 6;
 int random = rand.nextInt(range); 
 System.out.println(random);</code>
 </pre>
-<h3>Function</h3>
-<pre class="language-java"><code>static void print(String p){
+        <h3>Function</h3>
+        <pre class="language-java"><code>static void print(String p){
 System.out.println(p);
 }</code>
 </pre>
-<h3>Print Line</h3>
-<pre class="language-java"><code>System.out.println("Testing");</code>
+        <h3>array</h3>
+        <pre class="language-java"><code>int a[]=new int[5];
+a[0]=10;
+a[1]=20;  
+a[2]=70;  
+a[3]=40;  
+a[4]=50;
+System.out.println(a[2]);</code></pre>
+<h3>array</h3>
+<pre class="language-java"><code>int a[]={1,2,3,4,5};
+System.out.println(a[2]);</code></pre>
+        <h3>While Loop</h3>
+        <pre class="language-java"><code>while(true){
+System.out.println("Hello world");
+}</code></pre>
+        <h3>While Loop In Range</h3>
+        <pre class="language-java"><code>int a = 0;
+while(a&lt;5){
+System.out.println("Hello world");
+a++;
+}</code></pre>
+        <h3>For Loop</h3>
+        <pre class="language-java"><code>for(int a = 0; a &lt; 5; a++){
+    System.out.println("Hello world");
+}</code></pre>
+<h3>Do while Loop</h3>
+<pre class="language-java"><code>int a = 0;
+do{
+System.out.println("Hello world");
+a++;
+}while(a &lt; 5);</code></pre>
+        <h3>Print Line</h3>
+        <pre class="language-java"><code>System.out.println("Testing");</code>
 </pre>
-<h3>Print</h3>
-<pre class="language-java"><code>System.out.print("Testing");</code>
+        <h3>Print</h3>
+        <pre class="language-java"><code>System.out.print("Testing");</code>
 </pre>
-<h3>String Variable</h3>
-<pre class="language-java"><code>String str="String";</code>
+        <h3>String Variable</h3>
+        <pre class="language-java"><code>String str="String";</code>
 </pre>
-<h3>Int Variable</h3>
-<pre class="language-java"><code>int number=43;</code>
+        <h3>Int Variable</h3>
+        <pre class="language-java"><code>int number=43;</code>
 </pre>
-<h3>Float Variable</h3>
-<pre class="language-java"><code>double decimal=23.5;</code>
+        <h3>Float Variable</h3>
+        <pre class="language-java"><code>double decimal=23.5;</code>
 </pre>
+<h3>Conditonals</h3>
+<pre class="language-java"><code>if(1==5){
+    System.out.println("Match");
+}
+else{
+    System.out.println("Don't Match");
+}</code></pre>
+<h3>Switch Case</h3>
+<pre class="language-java"><code>int a = 3;
+switch(a){
+    case(1):{
+        System.out.println("The number is 1");
+        break;
+            }
+    case(2):{
+        System.out.println("The number is 2");
+        break;
+            }
+        case(3):{
+        System.out.println("The number is 3");
+        break;
+            }
+    default:{
+        System.out.println("Other number");
+        break;
+            }
+}</code></pre>
     </div>
     <script src="prism.js"></script>
 </body>
+
 </html>
