--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <meta name="description" content="Java cheatsheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java cheatsheet</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="prism.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
@@ -17,7 +16,7 @@
 <body>
     <div class="heading">
         <div class="content">
-            <i class="fas fa-file-spreadsheet fa-3x"></i>
+<img height="50" width="100" src="https://muhammedraiyaan2.github.io/Server/copy.svg" alt="copy">
             <H1 class="head">Welcome to the Java cheatsheet</H1>
         </div>
     </div>
@@ -31,15 +30,18 @@ System.out.println("Testing");
 }</code></pre>
         <h3>String Input</h3>
         <pre class="language-java"><code>import java.util.Scanner;
+System.out.println("Enter the string input");
 Scanner input1=new Scanner(System.in);
 String input2=input1.nextLine();</code></pre>
         <h3>Int Input</h3>
         <pre class="language-java"><code>import java.util.Scanner;
+System.out.println("Enter the int number");
 Scanner input1=new Scanner(System.in);
 int input2=input1.nextInt();</code>
 </pre>
         <h3>Float Input</h3>
         <pre class="language-java"><code>import java.util.Scanner;
+System.out.println("Enter the float number");
 Scanner input1=new Scanner(System.in);
 double input2=input1.nextInt();</code>
 </pre>
