--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@ switch(a){
             }
 }</code></pre>
     </div>
+    <footer class="footer">
+          <div class="icons-foot">
+        <img src="https://muhammedraiyaan2.github.io/Server/github%20icon.svg" onclick="window.open('https://github.com/muhammedraiyaan2')" height="50" width="50" class="github" alt="github"><br>
+        <p>&copy; Copyright@ 2021 Java cheatsheet</p>
+          </div>  
+          <br>
+<span class="text-left">Mail <img src="https://muhammedraiyaan2.github.io/Server/mail%20icon.svg" alt="icon" height="30" width="30"> muhammedraiyaan2@gmail.com</span><br>
+    </footer>
     <script src="prism.js"></script>
 </body>
 
